2007-03-29  Matthew Barnes  <mbarnes@redhat.com>

	* em-account-editor.c:
	* em-folder-view.c:
	* em-format-html-display.c:
	* em-format-html.c:
	* em-format.h:
	* em-mailer-prefs.c:
	* em-vfolder-rule.c:
	* mail-ops.c:
	* mail-send-recv.c:
	* message-list.c:
	Fix "incompatible pointer type" warnings (#360619).

2007-03-27  Matthew Barnes  <mbarnes@redhat.com>

	* em-mailer-prefs.c:
	* em-mailer-prefs.h:
	* mail-config.glade:
	Migrate from GnomeFontPicker to GtkFontButton (#373837).

2007-03-27  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-browser.c:
	* em-format.c:
	* em-popup.c:
	Don't mix declarations and code (#405495).

2007-03-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #419524

	* Include <glib/gi18n.h> instead of <libgnome/gnome-i18n.h>.

	* em-migrate.c (emm_setup_initial): Use g_get_language_names()
	instead of gnome_i18n_get_language_list().

2007-03-16  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #360240

	* em-vfolder-rule.c (select_source_with_changed), (get_widget):
	* em-format-quote.c (emfq_format_source):
	* mail-ops.c (save_messages_save):
	* em-format.c (emf_init):
	* em-format-html-display (em_format_html_get_search_dialog),
	(em_format_html_display_seearch_with), (ehhd_resize),
	(efhd_attachment_optional), (efhd_format_optional):
	* em-folder-view.c (emfv_init):
	* message-list.c (ml_tree_value_at):
	Remove unused variables.

2007-03-12  Harish Krishnaswamy <kharish@novell.com>

	*default/C : Update Welcome mail. 

2007-02-27  Simon Zheng  <simon.zheng@sun.com>

	* Fixes #402727
	
	* em-folder-view.c: (em_folder_view_print),
	Remove setting default response id because 
	of print-preview button in print_unix_dialog
	aren't set GTK_CAN_DEFAULT flag.

2007-02-26  Sankar P  <psankar@novell.com>

	* Committed on behalf of 
	Raghavendran R <raghavguru7@gmail.com>

	* Fixes #256382

	* em-folder-view.c: (emfv_mail_next_unread),
	(emfv_mail_previous_unread):
	Mail grabs the focus when keyboard-shortcut 