@@ -1,3 +1,9 @@
+2007-03-29  Matthew Barnes  <mbarnes@redhat.com>
+
+	* save-attachments.c:
+	Evolution requires GLib 2.10 now; remove dead backward-compatibility
+	code for GLib < 2.8 (#418971).
+
 2007-01-27  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
 
 	* save-attachments.c: (save_got_message):
